# backlog

./: .gitignore  README.md  main.py  pyproject.toml  tasks.json
.github/: copilot-instructions.md
.github/workflows/: pr-check.yml  release.yml
backlog/: cli.py
backlog/core/: markdown.py  models.py  storage.py  task_ops.py
docs/: commands.md  prd.md  project-structure.md  spec.md
tasks/: task_001.md
tests/: conftest.py  test_task_add.py  test_task_list.py
